modified userController and deleted duplicate routes

--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,6 @@ PORT='portnumber' || 8000
 DB_SCHEMA_NAME=simpelo-o_ims
 DB_USERNAME=<db_username>
 DB_PASSWORD=<db_password>
+
+admin pass = test1234
+cashier = test
