--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "knex": "^2.3.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "uuid": "^9.0.0"
   }
